testdata/typechecker/error/WhileTest-err1.java
int main() {
            while(3) {} // TE
		return 0;
}
